# risenrichR

./: .Rhistory  .gitignore  CONTRIBUTING.md  DESCRIPTION  GoogleScholarPortugueseMateChoiceExample_enriched.bib  LICENSE  NAMESPACE  README.Rmd  README.html  README.md  pyproject.toml
R/: api_crossref.R  api_openaire.R  api_openalex.R  as_tbl.R  bind_enriched.R  candidates.R  class_enriched_refs.R  enrich_refs.R  methods_as_tibble.R  methods_summary.R  provenance.R  python_backend.R  read_input.R  resolve_fields.R  score_candidates.R  utils_abstract_qc.R  utils_qc.R  utils_text.R  write_enriched_bib.R
data/: GoogleScholarPortugueseMateChoiceExample.ris
man/: as_tbl.Rd  as_tibble.enriched_refs.Rd  bind_enriched.Rd  build_bib_records.Rd  build_openalex_abstract.Rd  candidates.Rd  choose_abstract_value.Rd  clean_html_tags.Rd  define_python_bib_helpers.Rd  define_python_ris_helpers.Rd  enrich_refs.Rd  ensure_python_packages.Rd  ensure_python_rispy.Rd  extract_crossref_year.Rd  extract_keywords_from_raw.Rd  extract_note_from_raw.Rd  extract_openaire_abstract.Rd  extract_openaire_authors.Rd  extract_openaire_doi.Rd  extract_openaire_id.Rd  extract_openaire_journal.Rd  extract_openaire_publisher.Rd  extract_openaire_results.Rd  extract_openaire_title.Rd  extract_openaire_year.Rd  extract_url_from_raw.Rd  first_non_missing.Rd  flag_abstract_quality.Rd  flag_title_quality.Rd  is_missing_value.Rd  make_bib_key.Rd  map_ris_type_to_bib.Rd  new_enriched_refs.Rd  normalize_text.Rd  null_if_missing.Rd  parse_ris_python.Rd  provenance.Rd  query_crossref.Rd  query_openaire.Rd  (+8 more)
(+14 files in other folders)
